# gst-websockettransceiver

./: .dockerignore  Dockerfile  README.md  meson.build
.github/workflows/: build.yml
src/: gstplugin.c  gstwebsockettransceiver.c  gstwebsockettransceiver.h  meson.build
test_e2e/: README.md  requirements.txt  rtp_client.py  rtp_websocket_bridge.py  websocket_server.py
test_openai/: README.md  requirements.txt  rtp_client.py  rtp_websocket_bridge.py  websocket_server.py
tests/: meson.build  run_integration_test.sh  stub_websocket_server.py
tests/check/elements/: websockettransceiver.c  websockettransceiver_integration.c
